# cppDataPipeline

./: .gitignore  .zenodo.json  .zenodo.json.license  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Doxyfile  README.md  annotated.html  api_8hxx.html  api_8hxx_source.html  api__object_8hxx_source.html  class_data_pipeline_impl__.html  class_f_d_p_1_1_a_p_i-members.html  class_f_d_p_1_1_a_p_i.html  class_f_d_p_1_1_api_metadata-members.html  class_f_d_p_1_1_api_metadata.html  class_f_d_p_1_1_api_object-members.html  class_f_d_p_1_1_api_object.html  class_f_d_p_1_1_config-members.html  class_f_d_p_1_1_config.html  class_f_d_p_1_1_data_pipeline-members.html  class_f_d_p_1_1_data_pipeline.html  class_f_d_p_1_1_data_pipeline_1_1impl-members.html  class_f_d_p_1_1_data_pipeline_1_1impl.html  class_f_d_p_1_1_i_o_object-members.html  class_f_d_p_1_1_i_o_object.html  class_f_d_p_1_1_versioning_1_1version-members.html  class_f_d_p_1_1_versioning_1_1version.html  class_f_d_p_1_1config__parsing__error-members.html  class_f_d_p_1_1config__parsing__error.html  class_f_d_p_1_1json__parse__error-members.html  class_f_d_p_1_1json__parse__error.html  class_f_d_p_1_1logger-members.html  class_f_d_p_1_1logger.html  class_f_d_p_1_1rest__apiquery__error-members.html  class_f_d_p_1_1rest__apiquery__error.html  class_f_d_p_1_1sync__error-members.html  class_f_d_p_1_1sync__error.html  class_f_d_p_1_1validation__error-members.html  (+89 more)
.github/workflows/: docs.yaml  fdp_cpp_api.yaml  scrc_cpp_api.yml  test_with_simple_model.yaml
cmake_modules/: CodeCoverage.cmake
docs/: getting_started.md  index.md  install.md  read_write_param.md
examples/: check_fetch_all.cxx
include/: api.hxx  array.hxx  data_pipeline.hxx  distributions.hxx  fdp.hxx
include/fdp/: exceptions.hxx  fdp.hxx  fdparrayref.hxx  fdpnetcdf.hxx  fdpnetcdf2.hxx  netcdf_details.h
include/fdp/objects/: api_object.hxx  config.hxx  data.hxx  distributions.hxx  io_object.hxx  metadata.hxx
include/fdp/registry/: api.hxx  data_io.hxx  data_object.hxx  datapipeline.hxx  file_system.hxx
include/fdp/utilities/: doi.hxx  hdf5.hxx  json.hxx  logging.hxx  semver.hxx
include/scrc/: exceptions.hxx  fdp.hxx
include/scrc/objects/: data.hxx  distributions.hxx  metadata.hxx
include/scrc/registry/: api.hxx  data_object.hxx  datapipeline.hxx  file.hxx  file_system.hxx  options.hxx
include/scrc/utilities/: doi.hxx  hdf5.hxx  json.hxx  logging.hxx  semver.hxx
include/windows_sys/: time.cpp  time.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  (+18 more)
src/: CMakeLists.txt  api.cxx  array.cxx  data_pipeline.cxx  distributions.cxx  fdp.cxx  fdparrayref.cxx  fdpnetcdf.cxx  fdpnetcdf.hxx  fdpnetcdf2.cxx  fdpnetcdf_details.hxx
src/object/: metadata.cxx
src/objects/: api_object.cxx  config.cxx  data.cxx  metadata.cxx
src/registry/: api.cxx  data_io.cxx  data_object.cxx  datapipeline.cxx  file.cxx  file_system.cxx  options.cxx
src/utilities/: doi.cxx  hdf5.cxx  json.cxx  logging.cxx  semver.cxx
test/: CMakeLists.txt  config.yaml  test_api.cxx  test_api_object.cxx  test_builder.cxx  test_config.cxx  test_data.cxx  test_file.cxx  test_filesystem.cxx  test_objects.cxx  test_pimpl.cxx  test_registry.cxx  test_setup.sh  test_utilities.cxx
test/.fair/: cli-config.yaml
test/data/: read_csv.yaml  test_pe.toml  write_csv.yaml
test/standard/: xtest.nc
