# Find and add the .cxx files to SRC_FILES
FILE( GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cxx )

# Add the (Static) Project Library using SRC_FILES
ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRC_FILES} )

# Set libraries compiled in debug mode to end in 'd'
SET_TARGET_PROPERTIES( ${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "d" )

# Set the public header
SET_TARGET_PROPERTIES( ${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${FDPAPI_CODE_COVERAGE}" )

# Add include directories for Package Headers
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PRIVATE ${FDPAPI_INCLUDE_DIRS} )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${jsoncpp_SOURCE_DIR}/include )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${yamlcpp_SOURCE_DIR}/include )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${CURL_INCLUDE_DIRS} )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${digestpp_SOURCE_DIR} )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${spdlog_SOURCE_DIR}/include )
# Toml 11 is a header only library no need to link
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${tomlcpp_SOURCE_DIR} )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${HDF5_INCLUDE_DIRS} )

# Link the package libraries - Packages will be automatically found during fetch_content
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC jsoncpp_static )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC digestpp )  
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC yaml-cpp )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC spdlog )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC ${CURL_LIBRIES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC ${HDF5_CXX_LIBRARIES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC ${HDF5_CXX_HL_LIBRARIES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC ${HDF5_C_LIBRARIES} )

# Install the libraries
INSTALL( TARGETS ${PROJECT_NAME} 
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)